Handle scenario in which multiple players are disconnected at one time.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -53,7 +53,7 @@
             <section id="error-player-disconnected" class="modal error-modal">
                 <div id="text" class="col-sm-10 col-xs-12 col-centered">
                   <h1>Ummm...</h1>
-                  <h2>It looks like <span id="player"></span> are disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
+                  <h2>It looks like <span id="player"></span> <span id="singular">is</span><span id="plural">are</span> disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
                 </div>
             </section>
 
