--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -17,6 +17,7 @@ $turquoise-light: #61f5de;
 $color-blue: #20b5e6;
 $blue-dark: #0098d0;
 $blue-light: #56d5ff;
+$tiffany-blue: #61f5de;
 
 // Red
 $color-red: #ff4700;
@@ -36,7 +37,8 @@ $pink-light: #ff3d6b;
 // Grey
 $color-grey: #555555;
 $grey-dark: #949494;
-$color-white: #ebebeb;
+$color-white: #ebebeb; 
+$greyish-brown-70: rgba(85, 85, 85, 0.7);
 
 // Game
 $logo-color: #00c5c2;
