css updates, fix role card animation, fix role card hidden state

--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -130,3 +130,14 @@ $(document).on('show', '.screen', function(evt) {
 
 	screenOpen($(evt.currentTarget));
 });
+
+
+{{!-- Role Card Open/Close --}}
+function roleCardOpenClose(open) {
+
+	var hidden = { yPercent:100, opacity:0, ease:Expo.easeOut, display:'none' },
+			shown = { yPercent:0, opacity:1, ease:Expo.easeIn, display:'block' };
+
+	TweenLite.fromTo($('#role-card'), .5, (open ? hidden:shown) , (open ? shown:hidden) );
+
+}
