--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -439,8 +439,10 @@
 				color: $color-turquoise;
 				margin: 5px 5px;
 				padding: 2px;
-				height: 5px;
-				width: 5px;
+				height: 8px;
+				width: 8px;
+				border-radius:4px;
+				border:none;
 			}
 
 		  .dot {
@@ -465,6 +467,8 @@
 				border: 0px;
 			}
 			.glide__slide {
+
+				min-width: 320px;
 
 				&.active {
 					.deck {
