--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -14,6 +14,7 @@ html, body {
 	
 	max-height: 100%;
 	height:100%;
+	line-height:1 !important;
 	
 	// @include gradient-vertical($background-color, $turquoise-dark, 55%, 45%);
 
