--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -350,13 +350,12 @@ socketEvents = function(eventId, eventData) {
         case 'player:assignrole':
 
             $('#role-card').html(eventData);
-            $('#bottom-bar').show();
             
             $('#btn-close-role-card').on('click', function(evt) {
-                $('#role-card').removeClass('open').addClass('closed');
+                roleCardOpenClose(false);
             });
             $('#btn-role-card').on('click', function(evt) {
-                $('#role-card').removeClass('closed').addClass('open');
+                roleCardOpenClose(true);
             });
             $('#role-card').on('swipe', function() {
                 $('#role-card').removeClass('open').addClass('closed');
@@ -368,6 +367,7 @@ socketEvents = function(eventId, eventData) {
         case 'game:next_item':
 
             $('#bottom-bar').show();
+            $('#gameContent').addClass('inGame');
 
             $('#agenda-items .role:visible').remove();
             $('#agenda-items .role').first().show();
@@ -389,6 +389,12 @@ socketEvents = function(eventId, eventData) {
             break;
 
         case 'game:next_phase':
+
+            if (! $('#gameContent').hasClass('inGame')){
+                $('#gameContent').addClass('inGame');
+            }
+            
+            $('#bottom-bar').show();
 
             $('#stages-bar').show();
             sessionStorage.setItem('gameCode', gameCode);
