--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -176,7 +176,7 @@ input.post-button {
 	background-color: white;
 }
 
-.role, .agenda_item {
+.agenda_item {
 	display: none;
 }
 
@@ -302,7 +302,7 @@ input.post-button {
 }
 
 // More Time Card/Pitch Choice
-.choice-wrapper {
+.inner-modal {
 	position: relative;
 	text-align:center;
 	height: 100%;
@@ -311,7 +311,7 @@ input.post-button {
 	top: 0px;
 	background-color: $greyish-brown-70;
 	
-	.form {
+	.inner {
 		position: relative;
 	  height: 60%;
 	  width: 90%;
@@ -321,13 +321,14 @@ input.post-button {
 		border: white 3px solid;
 		color: white;
 
-		button {
+		.player-logo {
 			width: 80%;
 			margin: 10px auto;
 			height: 60px;
 			border-radius: 30px;
 			color: white;
 			border: 0px;
+			background-position: 10px 10px
 
 			&#btn-more-time {
 				background-color: $color-red;
