--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -241,44 +241,32 @@
   */
 	var updateGameContent = function(content, callback, pauseAnimate) {
 
-		var lobbyAnim = new TimelineLite();
-		lobbyAnim.to(gameContainer, .5, {xPercent:-100, ease:Expo.easeInOut, onComplete:function() {
+		// Inject markup content and fire callback when done
+		gameContainer.html(content)
+								 .promise()
+								 .done(function() {
+			
+										if(!pauseAnimate) {
+										
+										 		if(callback)
+											 		callback();
 
-			// Inject markup content and fire callback when done
-			gameContainer.html(content)
-									 .promise()
-									 .done(function() {
-				
-											if(!pauseAnimate) {
-												// Animate screen back in now and then run callback
-												lobbyAnim.fromTo(gameContainer, .5, {xPercent:100}, {x:0, xPercent:0, ease:Expo.easeInOut, onComplete:function() {
-										 		
-											 		if(callback)
-												 		callback();
+											 	if(updateContentCallback)
+												 	updateContentCallback();
 
-												 	if(updateContentCallback)
-													 	updateContentCallback();
+										
+										}
+										else {
 
-												}})
-											}
-											else {
-													// Animate screen back in later using function passed to callback													
-											 		if(callback)
-												 		callback(function() {
-												 			lobbyAnim.fromTo(gameContainer, .5, {xPercent:100}, {x:0, xPercent:0, ease:Expo.easeInOut});
-												 		});
-												 	
-												 	if(updateContentCallback)
-													 	updateContentCallback();
+											 	if(updateContentCallback)
+												 	updateContentCallback();
 
-											}
+										}
 
-									    // Hide loading
-									    $('#loading-modal').fadeOut(250);
+								    // Hide loading
+								    $('#loading-modal').fadeOut(250);
 
-									 });
-
-		}})
+								 });
 
 		if($('#top-header').length > 0) {
 			var topBar = $('#top-header').detach();
@@ -286,9 +274,101 @@
 		}
 	}
 
+	var nextPhase = function() {
+
+	    currentPhaseIndex++; 
+
+	    phaseBarProgress();
+
+	    // Local session update
+	    // sessionStorage.setItem('markup', $('#gameContent').html());    
+	    sessionStorage.setItem('phase', currentPhaseIndex);    
+
+	}
+
+	var nextPhaseScreen = function() {
+	    
+	    currentScreenIndex++;
+
+	    //TODO: Animate
+	    $.when($($('.screen')[0]).remove()).then(function() {
+
+	        var newScreen = $('.screen')[0];
+	        // $(newScreen).show();
+	        
+	        // Local session update
+	        sessionStorage.setItem('markup', $('#gameContent').html());   
+	        sessionStorage.setItem('screen', currentScreenIndex);
+
+	        $(newScreen).trigger('show');
+
+	        runMods();
+
+	        var timerPreview = $($('.screen')[0]).find('.timer.preview');
+	        var hasTimer = timerPreview.length === 1;
+	        if(hasTimer) {
+	            new ProgressBar.Circle(
+	              '.screen .timer.preview', 
+	              {
+	                    color: '#fff',
+	                    strokeWidth: 6,
+	                    trailColor: 'rbga(235, 235, 235, 0.5)',
+	                    trailWidth: 0.8,
+	                    fill: '#20b5e6',
+	                    text: {
+	                        value: $(timerPreview[0]).data('duration')
+	                    }
+	              }
+	            );
+	        }
+
+	    });
+
+	}
+
+	var openInnerModal = function(selector) {
+
+			if(!selector)
+				selector = '';
+
+	    // $('#gameContent').addClass('blur');
+	    $('#overlay').empty();
+	    $('#overlay').append($('.inner-modal' + selector).first());
+	    $('#overlay, #overlay .inner-modal').show();
+
+	    var modalDuration = $('#overlay .inner-modal').data('duration');
+
+	    if(modalDuration) {
+	        var modalTimeout = setTimeout(function() {
+	            var gotoNext = $('#overlay .inner-modal').data('next');
+
+	            clearTimeout(modalTimeout);
+
+	            $('#overlay').empty();
+	            $('#overlay').hide();
+
+	            if(gotoNext === 'next_screen')
+		            nextPhaseScreen();
+
+	            else if(gotoNext === 'next_modal')
+		            openInnerModal();
+
+	        }, modalDuration*1000);
+	    }
+	    
+	    $('#overlay .inner-modal .post-button').click(function(evt) {
+
+	        // $('#gameContent').removeClass('blur');
+	        $('#overlay').empty();
+	        $('#overlay').hide();
+
+	    });
+
+	}
+
 	var runMods = function() {
 
-		var modifier = $('span#modifier');
+		var modifier = $('.screen:first span#modifier');
 
 		// Engage any template script modifiers
 		if(modifier.length > 0) {
@@ -302,20 +382,8 @@
 				$(modifier.data().highlight).addClass('highlight');
 
 			// Move modal inside partial to top-level overlay and assign button events
-			if(modifier.data().choice_modal)  {
-
-				// $('#gameContent').addClass('blur');
-				$('#overlay').append($('.choice-wrapper'));
-				$('#overlay, .choice-wrapper').show();
-				
-				$('.choice-wrapper .post-button').click(function(evt) {
-
-					// $('#gameContent').removeClass('blur');
-          $('#overlay').empty();
-          $('#overlay').hide();
-
-				})
-			}
+			if(modifier.data().inner_modal)
+	      openInnerModal();
 
 		}
 		else {
