--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -146,7 +146,7 @@ var checkIfLoggedIn = function() {
 
 }
 
-var phaseBarProgress = function() {
+phaseBarProgress = function() {
 
     // Update progress bar
     $('#stages-bar #progress').css('width', (currentPhaseIndex * 17 ) + '%');
@@ -154,58 +154,6 @@ var phaseBarProgress = function() {
     // Change phase icon status
     $('#stages-bar .icon:eq('+currentPhaseIndex+')').removeClass('disabled');
     $('#stages-bar .icon:not(:eq('+currentPhaseIndex+'))').addClass('disabled');
-
-}
-
-var nextPhase = function() {
-
-    currentPhaseIndex++; 
-
-    phaseBarProgress();
-
-    // Local session update
-    // sessionStorage.setItem('markup', $('#gameContent').html());    
-    sessionStorage.setItem('phase', currentPhaseIndex);    
-
-}
-
-var nextPhaseScreen = function() {
-    
-    currentScreenIndex++;
-
-    //TODO: Animate
-    $.when($($('.screen')[0]).remove()).then(function() {
-
-        var newScreen = $('.screen')[0];
-        // $(newScreen).show();
-        
-        // Local session update
-        sessionStorage.setItem('markup', $('#gameContent').html());   
-        sessionStorage.setItem('screen', currentScreenIndex);
-
-        $(newScreen).trigger('show');
-
-        runMods();
-
-        var timerPreview = $($('.screen')[0]).find('.timer.preview');
-        var hasTimer = timerPreview.length === 1;
-        if(hasTimer) {
-            new ProgressBar.Circle(
-              '.screen .timer.preview', 
-              {
-                    color: '#fff',
-                    strokeWidth: 6,
-                    trailColor: 'rbga(235, 235, 235, 0.5)',
-                    trailWidth: 0.8,
-                    fill: '#20b5e6',
-                    text: {
-                        value: $(timerPreview[0]).data('duration')
-                    }
-              }
-            );
-        }
-
-    });
 
 }
 
