--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -324,26 +324,14 @@ socketEvents = function(eventId, eventData) {
 
         case 'player:agenda_item':
 
-            // Don't let next screen take over yet
-            waitForNextScreen = true;
-
-            var container = eventData.chosen ? $('#chosen') : $('#not-chosen');
+            $('.screen.restart').prevAll().remove();
+            $('.screen.restart').first().prevAll().remove();
+ 
+            // Hide any previously hidden elements            
+            $('.screen.restart .hidden-el').first().css({visibility:'hidden'});
+            $('.screen.restart').first().show();
             
-            // Edit coin count
-            container.text(container.text().replace('{coins}', eventData.coins));
-
-            var chosenAnim = new TimelineLite({onComplete: function() {
-
-                setTimeout(function() { updateGameContent(nextScreenData, function() {
-
-                    waitForNextScreen = false;
-                    nextScreenData = undefined;
-
-                }) }, 1400);
-
-            }});
-
-            chosenAnim.from(container, .6, {scale:0, autoAlpha: 0, ease:Elastic.easeOut});
+            openInnerModal();
 
             break;
 
@@ -364,14 +352,20 @@ socketEvents = function(eventId, eventData) {
             break;
 
         case 'game:start':
-        case 'game:next_item':
 
             $('#bottom-bar').show();
             $('#gameContent').addClass('inGame');
 
-            $('#agenda-items .role:visible').remove();
-            $('#agenda-items .role').first().show();
+            break;
 
+        case 'game:next_item':
+
+            var modalToOpen = eventData.chosen ? 'yes' : 'no';
+            var modalToRemove = !eventData.chosen ? 'yes' : 'no';
+
+            $('.agenda_item.' + modalToRemove).first().remove();
+            openInnerModal('.' + modalToOpen);
+ 
             break;
 
         case 'game:advance':
@@ -443,6 +437,9 @@ socketEvents = function(eventId, eventData) {
                 // Hide any previously hidden elements
                 $('.screen.restart .hidden-el').css({visibility:'hidden'});
                 $('.screen.restart').show();
+
+                openInnerModal();
+
 
             });
 
