Line height fix post-bootstrap

--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -7,6 +7,7 @@ p {
 	text-justify: inter-word;
 	-moz-hyphens: auto;
 	-webkit-hyphens:auto;
+	line-height: 1.4em;
 	hyphens: auto;
 	hyphenate-before: 2;
 	hyphenate-after:2;
