media queries, updating lobby screen, reduce padding on mobile devices not on the app

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -7,3 +7,23 @@
 	}
 	
 }
+
+@media (max-width: 320px) {
+
+	.glide__slide {
+		min-width: 274px !important;
+	}
+
+	.player-grid{
+		min-height: 45%;
+	}
+	
+}
+
+@media (max-width: 375px) and (min-width: 321px) {
+
+	.glide__slide {
+		min-width: 320px;
+	}
+	
+}
