--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -52,7 +52,7 @@
 		&#decider {
 			.waiting {
 				width: 90%;
-				margin: 5% auto;
+				margin: 0px auto;
 			}
 		}
 
@@ -75,6 +75,7 @@
 		  border-radius: 0px;
 		  background-color: transparent;
 		  border: 0px;
+		  font-size: 16px;
 
 	    &:before {
 		    content: "";
@@ -82,6 +83,7 @@
 		    z-index: 10;
 		    bottom: 5px;
 		    left: 18px;
+	      font-size: 16px;
 		    width: 0;
 		    height: 0;
 		    border-right: 10px solid $turquoise-light;
@@ -106,6 +108,8 @@
 			position:absolute;
 			right: 0px;
 			bottom: 0px;
+			font-size: 24px;
+			font-family: AvenirNext;
 		}
 
 		.username {
@@ -201,7 +205,7 @@
 
 		img {
 			// height: 136px;
-			width: 300px;
+			width: 256px;
 			padding: 10px;
 		}
 
@@ -489,7 +493,7 @@
 
 					.deck-header {
 						background-color: $color-orange;
-						padding: 8px 0px;
+						padding: 8px;
 						color: white;
 						box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
 						font-weight: 700;
@@ -506,12 +510,12 @@
 
 					.question {
 						height: auto;
-						margin: 10px;
+						margin: 8px 5%;
 						color: lighten(black, 10%);
 					  text-align: center;
-					  color: black;
 				  	line-height: 12px;
 				  	font-size: 12px;
+				  	width:90%;
 
 					}
 
@@ -535,6 +539,8 @@
 
 				    p{
 				    	display:table-cell;
+				    	padding:0px;
+				    	line-height: 1.33;
 				    	vertical-align: middle;
 				    }
 
@@ -570,7 +576,8 @@
 	    margin: 0px;
 	    margin-bottom: 20px;
 		  width: 100%;
-		  font-family: $aileron;
+		  font-family: AvenirNext;
+		  font-weight: bold;
 		}
 		p {
 			font-size: 12px;
