--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -15,6 +15,7 @@ html, body {
 	max-height: 100%;
 	height:100%;
 	line-height:1 !important;
+	font-size:100%;
 	
 	// @include gradient-vertical($background-color, $turquoise-dark, 55%, 45%);
 
