--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -34,8 +34,6 @@
 
 	height: 60px;
 	width: 70%;
-	// left: 15%;
-	// position: absolute;
 	display: inline-block;
 	padding: 0px;
   background-repeat: no-repeat;
@@ -177,10 +175,6 @@ input.post-button {
 	background-color: white;
 }
 
-.agenda_item {
-	display: none;
-}
-
 // HIDE ANY DECIDER-ONLY VIEWS BY DEFAULT
 #decider, #decider-controls {
 		display: none;
@@ -311,6 +305,55 @@ input.post-button {
 	left: 0px;
 	top: 0px;
 	background-color: $greyish-brown-70;
+
+	h1 {
+		font-family: $avenir-reg;
+		font-size: 20px;
+
+		strong {
+			font-family: $header-type;
+		}
+	}
+
+	h2 {
+		font-family: $body-type;
+		font-size: 16px;
+
+		color: $light-greenish-blue;
+	}
+
+	&.winner {
+
+		h1:not(.coins) {
+			font-size: 32px;
+			font-family: $body-type;
+			@include text-shadow(0, 2px, 2px, rgba(0, 0, 0, 0.24));
+		}
+
+		h2 {
+			font-family: $header-type;
+			font-size: 20px;
+
+			color: $tiffany-blue;
+		}
+	
+	}
+
+	&.agenda_item {
+
+		display: none;
+	
+		h2 {
+			font-family: $header-type;
+			font-size: 16px;
+			color: white;
+
+			.item {
+				color: $light-greenish-blue;
+			}
+		}
+
+	}
 	
 	.inner {
 		position: relative;
@@ -329,39 +372,73 @@ input.post-button {
 			border-radius: 30px;
 			color: white;
 			border: 0px;
-			background-position: 10px 10px
+			background-position: 10px 10px;
+
+			background-position: 29px 5px !important;
+			background-size: 48px 48px !important;
 
 			&#btn-more-time {
 				background-color: $color-red;
 				background-size: 50px 50px;
 				background-position: 3px center;
 				background-repeat: no-repeat;
-				background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png");
+				background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
 			}
 			&#btn-cancel {
 				background-color: $orange-dark;
 			}
 
-			&.pitch {
+		}
+		
+		.player-box {
 
-				width: 96%;
-				border-radius: 0px;
-				background-color: $aquamarine;
-				font-family: $header-type;
+			width: 96%;
+			border-radius: 0px;
+			padding-left: 12%;
+			font-size: 20px;
+			font-family: $header-type;
+			margin: 10px auto;
+			height: 60px;
 
-				h1 {
-					color: white;
-					font-size: 20px;
-					margin: 0;
+			background-color: $aquamarine;
+
+			&#reward-icon {
+				.coins {
+					margin-top: -1%;
+					padding-top: 7%;
+					width: 64px;
+					height: 64px;
+					background-repeat: no-repeat;
+					background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,w_64/v1490979430/at-stake/layout/icon-yourcoins.svg");
 				}
-				h2 {
-					color: $tiffany-blue;
-					line-height: 0;
-					font-size: 16px;
-				}
-			
 			}
 
+			h1 {
+				color: white;
+				margin: 0;
+				font-size: 20px;
+				font-family: $header-type;
+				text-shadow: none;
+			}
+			h2 {
+				color: $tiffany-blue;
+				line-height: 0;
+				font-size: 16px;
+				font-family: $header-type;
+			}
+
+			.info {
+		    position: relative;
+		    float: right;
+		    left: -13%;
+			}
+			.coins {
+		    position: relative;
+				float: left;   
+				margin-top: 10%;
+				font-size: 16px;
+			}
+		
 		}
 
 	}
