--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -12,6 +12,7 @@ $player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/uplo
 $color-turquoise: #00dcba; // Background color
 $turquoise-dark: #00c2a9; 
 $turquoise-light: #61f5de;
+$light-greenish-blue: #56f6d6;
 
 // Blue
 $color-blue: #20b5e6;
