--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -2,7 +2,7 @@
 <div id="meet">
 
 	{{!-- RULES - First Round Only --}}
-	{{#ifeq round '1'}}
+	{{#ifeq round 1}}
 		{{> shared/rules 
 				decider=true 
 		}}
